# d435-genom3

./: .gitignore  Makefile.am  README.adoc  bootstrap.sh  configure.ac  d435-genom3-uninstalled.pc.in  d435-genom3.pc.in  d435.gen  d435Struct.idl  time.idl
codels/: Makefile.am  RealsenseD435.cc  RealsenseD435.h  codels.h  codels.hpp  d435_codels.cc  d435_depth_publish_codels.cc  d435_hw_comm_codels.cc  d435_main_codels.cc  d435_rgb_publish_codels.cc
config/: settings_intel.json
